--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
 	},
 	"homepage": "https://github.com/JamesSkemp/phaser-3-vsc-typescript-nodejs",
 	"dependencies": {
-		"phaser": "^3.60"
+		"peerjs": "^1.4.7",
+		"phaser": "^3.60",
+		"uuid": "^9.0.0"
 	},
 	"scripts": {
 		"build": "webpack --mode production",
