--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 	},
 	"homepage": "https://github.com/JamesSkemp/phaser-3-vsc-typescript-nodejs",
 	"dependencies": {
+		"dotenv-webpack": "^8.0.1",
 		"peerjs": "^1.4.7",
 		"phaser": "^3.60",
 		"uuid": "^9.0.0"
@@ -21,9 +22,12 @@
 	"scripts": {
 		"build": "webpack --mode production",
 		"build-dev": "webpack --mode none",
+		"start": "webpack serve --mode production",
 		"start:dev": "webpack serve --mode production",
-		"lint": "eslint . --ext .js,.jsx,.ts,.tsx || (exit 0)"
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx || (exit 0)",
+		"postinstall": "webpack -p --config ./webpack.prod.config.js --progress"
 	},
+	
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.59.5",
 		"@typescript-eslint/parser": "^5.59.5",
